feat: refactor packages name

--- a/base-template/package.json
+++ b/base-template/package.json
@@ -8,6 +8,8 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "clean": "turbo run clean && rm -rf node_modules",
+    "run:expo": "cd apps/expo && yarn start",
+    "run:next": "cd apps/next && yarn dev",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore"
   },
   "devDependencies": {
