--- a/base-template/apps/expo/package.json
+++ b/base-template/apps/expo/package.json
@@ -29,7 +29,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "@repo/ui": "*"
+    "@base-template/ui": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
