--- a/base-template/apps/web/package.json
+++ b/base-template/apps/web/package.json
@@ -13,7 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
-    "@repo/ui": "*"
+    "@base-template/ui": "*"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
