--- a/base-template/apps/expo/package.json
+++ b/base-template/apps/expo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-app",
+  "name": "expo",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -29,7 +29,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "@base-template/ui": "*"
+    "@base-template/ui": "*",
+    "tailwindcss": "3.4.3",
+    "nativewind": "4.0.36"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -37,7 +39,8 @@
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "jscodeshift": "0.15.2"
   },
   "private": true
 }
