feat: setup expo app with nativewind

--- a/base-template/apps/next/package.json
+++ b/base-template/apps/next/package.json
@@ -12,8 +12,17 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-web": "^0.19.10",
-    "@base-template/ui": "*"
+    "react-native-web": "latest",
+    "@base-template/ui": "*",
+    "postcss": "latest",
+    "autoprefixer": "latest",
+    "@gluestack/ui-next-adapter": "latest",
+    "tailwindcss": "3.4.3",
+    "nativewind": "4.0.36",
+    "@gluestack-ui/overlay": "latest",
+    "@gluestack-ui/toast": "latest",
+    "@gluestack-ui/nativewind-utils": "latest",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
@@ -22,6 +31,7 @@
     "babel-plugin-react-native-web": "^0.19.10",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "jscodeshift": "0.15.2"
   }
 }
