--- a/base-template/apps/expo-app/package.json
+++ b/base-template/apps/expo-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo",
+  "name": "expo-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -28,10 +28,7 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "@base-template/ui": "*",
-    "tailwindcss": "3.4.3",
-    "nativewind": "4.0.36"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -39,8 +36,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3",
-    "jscodeshift": "0.15.2"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
