--- a/base-template/packages/screens/package.json
+++ b/base-template/packages/screens/package.json
@@ -14,6 +14,9 @@
     "@types/react-native": "^0.73.0",
     "typescript": "^5.3.3"
   },
+  "dependencies": {
+    "@base-template/components": "*"
+  },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-native": "^0.73.1"
