--- a/base-template/packages/screens/tsconfig.json
+++ b/base-template/packages/screens/tsconfig.json
@@ -13,6 +13,7 @@
     "importsNotUsedAsValues": "error",
     "forceConsistentCasingInFileNames": true,
     "jsx": "preserve",
+    "jsxImportSource": "nativewind",
     "lib": ["esnext", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
