--- a/base-template/package.json
+++ b/base-template/package.json
@@ -8,7 +8,7 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "clean": "turbo run clean && rm -rf node_modules",
-    "run:expo": "cd apps/expo && yarn start",
+    "run:expo": "cd apps/expo-app && yarn start",
     "run:next": "cd apps/next && yarn dev",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
     "postinstall": "patch-package"
