--- a/script/package.json
+++ b/script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack-ui/starter-kit-cli",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -13,14 +13,13 @@
   "author": "gluestack-ui",
   "license": "ISC",
   "dependencies": {
-    "@gluestack-ui/starter-kit-cli": "^1.0.2",
     "@types/node": "^20.12.12",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
     "nodemon": "^3.1.0"
   },
   "bin": {
-    "@gluestack-ui/starter-kit-cli": "dist/index.js"
+    "starter-kit-cli": "dist/index.js"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
