--- a/script/package.json
+++ b/script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack-ui/starter-kit-cli",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "nodemon": "^3.1.0"
   },
   "bin": {
-    "start": "dist/index.js"
+    "starter-kit-cli": "dist/index.js"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
