--- a/script/package.json
+++ b/script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gluestack-ui/starter-kit-cli",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -13,6 +13,7 @@
   "author": "gluestack-ui",
   "license": "ISC",
   "dependencies": {
+    "@gluestack-ui/starter-kit-cli": "^1.0.6",
     "@types/node": "^20.12.12",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
