--- a/base-template/apps/expo-app/package.json
+++ b/base-template/apps/expo-app/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@unitools/babel-plugin-universal-image": "^0.0.5",
+    "@unitools/image-expo": "^0.0.2",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -33,6 +35,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@unitools/babel-plugin-universal-image": "^0.0.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
