--- a/base-template/apps/next/package.json
+++ b/base-template/apps/next/package.json
@@ -9,20 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native-web": "latest",
     "@base-template/components": "*",
-    "postcss": "latest",
-    "autoprefixer": "latest",
-    "@gluestack/ui-next-adapter": "latest",
-    "tailwindcss": "3.4.3",
-    "nativewind": "4.0.36",
+    "@gluestack-ui/nativewind-utils": "latest",
     "@gluestack-ui/overlay": "latest",
     "@gluestack-ui/toast": "latest",
-    "@gluestack-ui/nativewind-utils": "latest",
-    "react-native-svg": "13.4.0"
+    "@gluestack/ui-next-adapter": "latest",
+    "@unitools/image-next": "^0.0.1",
+    "autoprefixer": "latest",
+    "nativewind": "4.0.36",
+    "next": "^14.0.4",
+    "postcss": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "latest",
+    "tailwindcss": "3.4.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
@@ -31,7 +32,7 @@
     "babel-plugin-react-native-web": "^0.19.10",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
-    "typescript": "^5.3.3",
-    "jscodeshift": "0.15.2"
+    "jscodeshift": "0.15.2",
+    "typescript": "^5.3.3"
   }
 }
