feat:added unitools for router

--- a/base-template/apps/expo-app/app.json
+++ b/base-template/apps/expo-app/app.json
@@ -16,13 +16,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.gluestack.expoapp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.gluestack.expoapp"
     },
     "web": {
       "bundler": "metro",
@@ -34,6 +36,21 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "148098d1-7e19-4326-9814-dd661a192776"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/148098d1-7e19-4326-9814-dd661a192776"
+    },
+    "owner": "gluestack"
   }
 }
