--- a/base-template/apps/expo-app/package.json
+++ b/base-template/apps/expo-app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.2",
     "@unitools/babel-plugin-universal-image": "^0.0.5",
     "@unitools/image-expo": "^0.0.2",
+    "@unitools/router-expo": "^0.0.1",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -24,6 +25,7 @@
     "expo-splash-screen": "~0.26.5",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.4",
+    "expo-updates": "~0.24.12",
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
