--- a/base-template/packages/screens/package.json
+++ b/base-template/packages/screens/package.json
@@ -15,7 +15,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@base-template/components": "*"
+    "@base-template/components": "*",
+    "@unitools/navigation": "^0.0.1-alpha.0",
+    "@unitools/router": "^0.0.4"
   },
   "peerDependencies": {
     "react": "^18.2.0",
