--- a/base-template/apps/expo-app/package.json
+++ b/base-template/apps/expo-app/package.json
@@ -18,31 +18,31 @@
     "@unitools/babel-plugin-universal-image": "^0.0.5",
     "@unitools/image-expo": "^0.0.2",
     "@unitools/router-expo": "^0.0.1",
-    "expo": "~50.0.17",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.4",
-    "expo-updates": "~0.24.12",
-    "expo-web-browser": "~12.8.2",
+    "expo": "~51.0.6",
+    "expo-font": "~12.0.5",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.14",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-updates": "~0.25.12",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@types/react": "~18.2.45",
     "@unitools/babel-plugin-universal-image": "^0.0.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~51.0.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
