--- a/base-template/packages/components/package.json
+++ b/base-template/packages/components/package.json
@@ -56,7 +56,7 @@
     "expo-image": "^1.12.9",
     "nativewind": "4.0.36",
     "react-native-reanimated": "latest",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "^15.2.0",
     "tailwindcss": "3.4.3"
   }
 }
