--- a/base-template/apps/expo-app/package.json
+++ b/base-template/apps/expo-app/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.2",
     "@unitools/babel-plugin-universal-image": "^0.0.5",
     "@unitools/image-expo": "^0.0.2",
+    "@unitools/link-expo": "^0.0.1",
     "@unitools/router-expo": "^0.0.1",
     "expo": "~51.0.6",
     "expo-font": "~12.0.5",
