--- a/base-template/apps/next/package.json
+++ b/base-template/apps/next/package.json
@@ -15,6 +15,7 @@
     "@gluestack-ui/toast": "latest",
     "@gluestack/ui-next-adapter": "latest",
     "@unitools/image-next": "^0.0.1",
+    "@unitools/link-next": "^0.0.1",
     "@unitools/router-next": "^0.0.1",
     "autoprefixer": "latest",
     "nativewind": "4.0.36",
