--- a/base-template/packages/screens/package.json
+++ b/base-template/packages/screens/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@base-template/components": "*",
+    "@unitools/link": "^0.0.3",
     "@unitools/navigation": "^0.0.1-alpha.0",
     "@unitools/router": "^0.0.4"
   },
