--- a/script/package.json
+++ b/script/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.8",
   "description": "",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
@@ -17,6 +18,7 @@
     "@types/node": "^20.12.12",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.2.0",
+    "jscodeshift": "^0.15.2",
     "nodemon": "^3.1.0"
   },
   "bin": {
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/jscodeshift": "^0.11.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
