--- a/script/tsconfig.json
+++ b/script/tsconfig.json
@@ -11,5 +11,5 @@
     "moduleResolution": "node",
     "allowJs": true
   },
-  "include": ["src/index.ts", "node_modules/@types/*"]
+  "include": ["src/index.ts", "src/transformer.ts", "node_modules/@types/*"]
 }
