chore: change package name

--- a/base-template/packages/components/package.json
+++ b/base-template/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@base-template/components",
+  "name": "@/components",
   "version": "0.0.0",
   "main": "index.js",
   "module": "index.js",
