--- a/base-template/apps/next/package.json
+++ b/base-template/apps/next/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@base-template/components": "*",
+    "@/components": "*",
     "@gluestack-ui/nativewind-utils": "latest",
     "@gluestack-ui/overlay": "latest",
     "@gluestack-ui/toast": "latest",
