--- a/starter-kit/apps/expo-app/package.json
+++ b/starter-kit/apps/expo-app/package.json
@@ -15,12 +15,12 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
-    "@unitools/babel-plugin-universal-image": "^0.0.5",
     "@unitools/image-expo": "^0.0.2",
     "@unitools/link-expo": "^0.0.1",
     "@unitools/router-expo": "^0.0.1",
     "expo": "~51.0.6",
     "expo-font": "~12.0.5",
+    "expo-image": "~1.12.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@types/react": "~18.2.45",
-    "@unitools/babel-plugin-universal-image": "^0.0.1",
+    "@unitools/babel-plugin-universal-image": "^1.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
