--- a/universal/package.json
+++ b/universal/package.json
@@ -12,7 +12,7 @@
     "run:next": "cd apps/next && yarn dev",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
     "postinstall": "patch-package",
-    "eject": "npx @gluestack-ui/eject-universal"
+    "eject": "npx @gluestack-ui/universal-cli@latest eject"
   },
   "devDependencies": {
     "prettier": "^3.1.1",
@@ -21,11 +21,5 @@
   "packageManager": "yarn@1.22.19",
   "engines": {
     "node": ">=18"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "lucide-react-native": "^0.378.0",
-    "react-hook-form": "^7.51.4",
-    "zod": "^3.23.8"
   }
 }
