--- a/next/package.json
+++ b/next/package.json
@@ -12,6 +12,10 @@
     "@unitools/link": "^0.0.3",
     "@unitools/navigation": "^0.0.1-alpha.0",
     "@unitools/router": "^0.0.4",
+    "@hookform/resolvers": "^3.3.4",
+    "lucide-react-native": "^0.378.0",
+    "react-hook-form": "^7.51.4",
+    "zod": "^3.23.8",
     "@expo/html-elements": "latest",
     "@gluestack-ui/accordion": "latest",
     "@gluestack-ui/actionsheet": "latest",
