--- a/expo-app/package.json
+++ b/expo-app/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --android",
+    "ios": "EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --ios",
     "web": "EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web",
     "test": "jest --watchAll"
   },
@@ -13,10 +13,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@unitools/image": "^0.0.4",
     "@unitools/link": "^0.0.3",
     "@unitools/navigation": "^0.0.1-alpha.0",
     "@unitools/router": "^0.0.4",
-    "@hookform/resolvers": "^3.3.4",
     "lucide-react-native": "^0.378.0",
     "react-hook-form": "^7.51.4",
     "zod": "^3.23.8",
@@ -51,7 +52,6 @@
     "@gluestack-ui/toast": "latest",
     "@gluestack-ui/tooltip": "latest",
     "@legendapp/motion": "latest",
-    "@unitools/image": "^0.0.2",
     "expo-image": "~1.12.9",
     "nativewind": "4.0.36",
     "react-native-reanimated": "latest",
@@ -59,7 +59,7 @@
     "tailwindcss": "3.4.3",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
-    "@unitools/image-expo": "^0.0.2",
+    "@unitools/image-expo": "^0.0.5",
     "@unitools/link-expo": "^0.0.1",
     "@unitools/router-expo": "^0.0.1",
     "expo": "~51.0.6",
