--- a/expo-app/package.json
+++ b/expo-app/package.json
@@ -14,15 +14,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@unitools/image": "^0.0.4",
-    "@unitools/link": "^0.0.3",
-    "@unitools/navigation": "^0.0.1-alpha.0",
-    "@unitools/router": "^0.0.4",
-    "lucide-react-native": "^0.378.0",
-    "react-hook-form": "^7.51.4",
-    "zod": "^3.23.8",
     "@expo/html-elements": "latest",
+    "@expo/vector-icons": "^14.0.0",
     "@gluestack-ui/accordion": "latest",
     "@gluestack-ui/actionsheet": "latest",
     "@gluestack-ui/alert": "latest",
@@ -52,19 +45,19 @@
     "@gluestack-ui/textarea": "latest",
     "@gluestack-ui/toast": "latest",
     "@gluestack-ui/tooltip": "latest",
+    "@hookform/resolvers": "^3.3.4",
     "@legendapp/motion": "latest",
-    "expo-image": "~1.12.9",
-    "nativewind": "4.0.36",
-    "react-native-reanimated": "latest",
-    "react-native-svg": "^15.2.0",
-    "tailwindcss": "3.4.3",
-    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@unitools/image": "^0.0.4",
     "@unitools/image-expo": "^0.0.5",
+    "@unitools/link": "^0.0.3",
     "@unitools/link-expo": "^0.0.1",
+    "@unitools/navigation": "^0.0.1-alpha.0",
+    "@unitools/router": "^0.0.4",
     "@unitools/router-expo": "^0.0.1",
     "expo": "~51.0.6",
     "expo-font": "~12.0.5",
+    "expo-image": "~1.12.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
@@ -72,24 +65,32 @@
     "expo-system-ui": "~3.0.4",
     "expo-updates": "~0.25.12",
     "expo-web-browser": "~13.0.3",
+    "lucide-react-native": "^0.378.0",
+    "nativewind": "4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-native": "0.74.1",
+    "react-native-reanimated": "latest",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "^15.2.0",
+    "react-native-web": "~0.19.6",
+    "tailwindcss": "3.4.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
-    "typescript": "~5.3.3",
-    "jscodeshift": "0.15.2",
-    "@babel/core": "^7.24.0",
     "@unitools/babel-plugin-universal-image": "^1.0.0",
+    "autoprefixer": "^10.4.20",
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
-    "react-test-renderer": "18.2.0"
+    "jscodeshift": "0.15.2",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
