--- a/expo-app/package.json
+++ b/expo-app/package.json
@@ -14,39 +14,39 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/html-elements": "latest",
+    "@expo/html-elements": "^0.10.1",
     "@expo/vector-icons": "^14.0.0",
-    "@gluestack-ui/accordion": "latest",
-    "@gluestack-ui/actionsheet": "latest",
-    "@gluestack-ui/alert": "latest",
-    "@gluestack-ui/alert-dialog": "latest",
-    "@gluestack-ui/avatar": "latest",
-    "@gluestack-ui/button": "latest",
-    "@gluestack-ui/checkbox": "latest",
-    "@gluestack-ui/divider": "latest",
-    "@gluestack-ui/fab": "latest",
-    "@gluestack-ui/form-control": "latest",
-    "@gluestack-ui/icon": "latest",
-    "@gluestack-ui/image": "latest",
-    "@gluestack-ui/input": "latest",
-    "@gluestack-ui/link": "latest",
-    "@gluestack-ui/menu": "latest",
-    "@gluestack-ui/modal": "latest",
+    "@gluestack-ui/accordion": "^1.0.6",
+    "@gluestack-ui/actionsheet": "^0.2.44",
+    "@gluestack-ui/alert": "^0.1.15",
+    "@gluestack-ui/alert-dialog": "^0.1.30",
+    "@gluestack-ui/avatar": "^0.1.17",
+    "@gluestack-ui/button": "^1.0.7",
+    "@gluestack-ui/checkbox": "^0.1.31",
+    "@gluestack-ui/divider": "^0.1.9",
+    "@gluestack-ui/fab": "^0.1.21",
+    "@gluestack-ui/form-control": "^0.1.18",
+    "@gluestack-ui/icon": "^0.1.22",
+    "@gluestack-ui/image": "^0.1.10",
+    "@gluestack-ui/input": "^0.1.31",
+    "@gluestack-ui/link": "^0.1.22",
+    "@gluestack-ui/menu": "^0.2.36",
+    "@gluestack-ui/modal": "^0.1.34",
     "@gluestack-ui/nativewind-utils": "latest",
     "@gluestack-ui/overlay": "latest",
-    "@gluestack-ui/popover": "latest",
-    "@gluestack-ui/pressable": "latest",
-    "@gluestack-ui/progress": "latest",
-    "@gluestack-ui/radio": "latest",
-    "@gluestack-ui/select": "latest",
-    "@gluestack-ui/slider": "latest",
-    "@gluestack-ui/spinner": "latest",
-    "@gluestack-ui/switch": "latest",
-    "@gluestack-ui/textarea": "latest",
-    "@gluestack-ui/toast": "latest",
-    "@gluestack-ui/tooltip": "latest",
+    "@gluestack-ui/popover": "^0.1.37",
+    "@gluestack-ui/pressable": "^0.1.16",
+    "@gluestack-ui/progress": "^0.1.16",
+    "@gluestack-ui/radio": "^0.1.32",
+    "@gluestack-ui/select": "^0.1.29",
+    "@gluestack-ui/slider": "^0.1.25",
+    "@gluestack-ui/spinner": "^0.1.14",
+    "@gluestack-ui/switch": "^0.1.22",
+    "@gluestack-ui/textarea": "^0.1.23",
+    "@gluestack-ui/toast": "^1.0.7",
+    "@gluestack-ui/tooltip": "^0.1.32",
     "@hookform/resolvers": "^3.3.4",
-    "@legendapp/motion": "latest",
+    "@legendapp/motion": "^2.4.0",
     "@react-navigation/native": "^6.0.2",
     "@unitools/image": "^0.0.4",
     "@unitools/image-expo": "^0.0.5",
