--- a/.github/workflows/gluestack-expo-app.yml
+++ b/.github/workflows/gluestack-expo-app.yml
@@ -3,10 +3,10 @@ name: Gluestack-ui Expo App | Start and Build
 on:
   push:
     branches:
-      - master
+      - patch
   pull_request:
     branches:
-      - master
+      - patch
 
 jobs:
   build:
