--- a/.github/workflows/universal-gluestack-app.yml
+++ b/.github/workflows/universal-gluestack-app.yml
@@ -3,10 +3,10 @@ name: Universal gluestack-ui App (Expo and NextJs) | Start and Build
 on:
   push:
     branches:
-      - master
+      - patch
   pull_request:
     branches:
-      - master
+      - patch
 
 jobs:
   build:
