--- a/.github/workflows/gluestack-next.yml
+++ b/.github/workflows/gluestack-next.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      working-directory: next
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
