--- a/.github/workflows/universal-gluestack-app.yml
+++ b/.github/workflows/universal-gluestack-app.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      working-directory: universal
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
