--- a/.github/workflows/gluestack-expo-app.yml
+++ b/.github/workflows/gluestack-expo-app.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Use Node.js 18.x
         uses: actions/setup-node@v1
         with:
-          node-version: "18.x"
+          node-version: 18.x
 
       - name: Install dependencies
         run: yarn
