--- a/.github/workflows/gluestack-next.yml
+++ b/.github/workflows/gluestack-next.yml
@@ -23,9 +23,11 @@ jobs:
           node-version: 18.x
 
       - name: Install dependencies
+        working-directory: ${{ env.working-directory }}
         run: yarn
 
       - name: Start Next
+        working-directory: ${{ env.working-directory }}
         run: yarn dev
 
       - name: Build Next
