--- a/.github/workflows/gluestack-expo-app.yml
+++ b/.github/workflows/gluestack-expo-app.yml
@@ -26,6 +26,17 @@ jobs:
         working-directory: ${{ env.working-directory }}
         run: yarn
 
-      - name: Start Expo
+      - name: Start Expo on port 19006
         working-directory: ${{ env.working-directory }}
-        run: yarn start --non-interactive
+        run: |
+          yarn start:web --port 19006 &
+          echo $! > expo_pid.txt
+          sleep 60 # Wait for Expo to start
+
+      - name: Run tests
+        working-directory: ${{ env.working-directory }}
+        run: yarn test
+
+      - name: Kill Expo server
+        run: |
+          kill $(cat expo_pid.txt)
