--- a/universal/package.json
+++ b/universal/package.json
@@ -10,6 +10,7 @@
     "clean": "turbo run clean && rm -rf node_modules",
     "run:expo": "cd apps/expo-app && yarn start",
     "run:next": "cd apps/next && yarn dev",
+    "build:next": "cd apps/next && yarn build",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
     "postinstall": "patch-package",
     "eject": "npx @gluestack-ui/universal-cli@latest eject"
