--- a/.github/workflows/gluestack-expo-app.yml
+++ b/.github/workflows/gluestack-expo-app.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Start Expo on port 19006
         working-directory: ${{ env.working-directory }}
         run: |
-          yarn start:web --port 19006 &
+          yarn web --port 19006 &
           echo $! > expo_pid.txt
           sleep 60 # Wait for Expo to start
 
