--- a/expo-app/package.json
+++ b/expo-app/package.json
@@ -86,6 +86,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.1",
+    "jest-junit": "^16.0.0",
     "jscodeshift": "0.15.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
