--- a/expo-app/package.json
+++ b/expo-app/package.json
@@ -78,6 +78,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
+    "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.7.2",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
