feat: nativewind 4.1 compatibility added

--- a/next/tsconfig.json
+++ b/next/tsconfig.json
@@ -29,6 +29,9 @@
       ],
       "@/*": [
         "./*"
+      ],
+      "tailwind.config": [
+        "./tailwind.config.js"
       ]
     },
     "jsxImportSource": "nativewind"
