feat: upgraded expo standalone app to 4.1

--- a/expo-app/tsconfig.json
+++ b/expo-app/tsconfig.json
@@ -10,6 +10,9 @@
       "@/assets/*": [
         "../../packages/shared/assets/*",
         "./assets/*"
+      ],
+      "tailwind.config": [
+        "./tailwind.config.js"
       ]
     }
   },
@@ -17,6 +20,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "nativewind-env.d.ts"
   ]
 }
