--- a/next/package.json
+++ b/next/package.json
@@ -28,7 +28,7 @@
     "@gluestack-ui/menu": "^0.2.37",
     "@gluestack-ui/modal": "^0.1.35",
     "@gluestack-ui/nativewind-utils": "^1.0.26-alpha.2",
-    "@gluestack-ui/overlay": "^0.1.14",
+    "@gluestack-ui/overlay": "^0.1.16",
     "@gluestack-ui/popover": "^0.1.43",
     "@gluestack-ui/pressable": "^0.1.17",
     "@gluestack-ui/progress": "^0.1.18",
@@ -53,15 +53,16 @@
     "autoprefixer": "^10.4.20",
     "expo-image": "^1.12.9",
     "lucide-react-native": "^0.378.0",
-    "nativewind": "4.1.23",
+    "nativewind": "^4.1.23",
     "next": "^14.0.4",
     "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-native-css-interop": "^0.1.22",
     "react-native-reanimated": "latest",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "15.2.0",
     "react-native-web": "^0.19.13",
     "tailwindcss": "^3.4.15",
     "zod": "^3.23.8"
