fix: universal starter kit

--- a/universal/apps/next/package.json
+++ b/universal/apps/next/package.json
@@ -10,21 +10,24 @@
   },
   "dependencies": {
     "@/components": "*",
-    "@gluestack-ui/nativewind-utils": "latest",
-    "@gluestack-ui/overlay": "latest",
-    "@gluestack-ui/toast": "latest",
+    "@gluestack-ui/nativewind-utils": "^1.0.26-alpha.2",
+    "@gluestack-ui/overlay": "^0.1.16",
+    "@gluestack-ui/toast": "^1.0.8",
     "@gluestack/ui-next-adapter": "latest",
     "@unitools/image-next": "^0.0.6",
     "@unitools/link-next": "^0.0.1",
     "@unitools/router-next": "^0.0.1",
-    "autoprefixer": "latest",
-    "nativewind": "4.0.36",
+    "autoprefixer": "^10.4.20",
+    "nativewind": "^4.1.23",
     "next": "^14.0.4",
-    "postcss": "latest",
+    "postcss": "^8.4.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-web": "latest",
-    "tailwindcss": "3.4.3"
+    "react-native-css-interop": "^0.1.22",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-web": "^0.19.13",
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
